# sailors-log

./: .gitignore  Dockerfile  README.md  deploy.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tsconfig.json
config/: settings.py  urls.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: main.ts
k8s/: sailors-log-deployment.yaml  sailors-log-ingress.yaml  sailors-log-pvc.yaml  sailors-log-service.yaml
media/tracks/: 2025-06-01_11-20_Trigon.gpx
sailors_log/: admin.py  apps.py  asgi.py  constants.py  settings.py  urls.py  views.py  wsgi.py
sailors_log/migrations/: 0001_initial.py  0002_remove_boat_type_boat_beam_m_boat_displacement_kg_and_more.py
sailors_log/templatetags/: datetime_filters.py
sailors_log_app/: admin.py  apps.py  constants.py  forms.py  models.py  signals.py  tasks.py  trip_statistics.py  urls.py  views.py  weather.py
sailors_log_app/analytics/: trip_statistics.py
sailors_log_app/migrations/: 0001_initial.py  0002_boats.py  0003_alter_trip_title_weathersnapshot.py
sailors_log_app/services/: weather.py
sailors_log_app/templates/: boat_statistics.html  trip_create.html  trip_detail.html  trip_list.html
sailors_log_app/tests/: test_trip_statistics.py  test_weather_parsing.py
static/css/: trip_detail.css  trip_list.css
static/js/: main.js  trip_create.js  trip_detail.js
templates/: base.html
templates/includes/: navbar.html
templates/registration/: login.html
typescript/: package-lock.json  package.json  tsconfig.json
typescript/src/: main.ts  trip_detail.ts
(+2 files in other folders)
