[tool.poetry]
name = "sailors-log"
version = "0.1.0"
description = ""
authors = ["RincewindWizzard <git@magierdinge.de>"]
license = "LGPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
